# vpnhide

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.ru.md  build.gradle.kts  settings.gradle.kts  update-version.sh
app/: build.gradle.kts  proguard-rules.pro
changelog.d/: README.md  added-dashboard-now-splits-issues-into-errors-ac99.md  added-debug-logging-toggle-in-diagnostics-off-82f6.md  added-diagnose-wrong-variant-kmod-installs-dashboard-ef23.md  added-expand-russian-apps-filter-youla-delivery-df7c.md  changed-changelog-entries-now-live-as-per-3290.md  changed-dashboard-no-longer-re-runs-all-cbf4.md  changed-diagnostics-and-protection-tabs-now-open-924e.md  changed-diagnostics-tab-opens-instantly-even-on-0580.md  changed-help-text-on-protection-screens-tun-8c8a.md  changed-installed-app-list-is-now-loaded-b3a2.md  fixed-app-hiding-marking-the-same-app-1b7d.md  fixed-dashboard-now-shows-a-consistent-version-75e0.md  fixed-dev-builds-of-the-app-no-e2f4.md  fixed-dev-builds-of-the-app-now-86b8.md  fixed-protection-toolbar-the-filter-icon-indicator-7c28.md
docs/: changelog.md  development.md  releasing.md
kmod/: .env.example  BUILDING.md  Makefile  README.md  build-zip.sh  vpnhide_kmod.c
lsposed/: README.md
lsposed/native/: Cargo.toml
portshide/: build-zip.sh
scripts/: _changelog.py  build-version.sh  changelog-add.py  changelog.py  changelog_lib.py  preview-changelog.py  release.py  update-version.py
update-json/: changelog.md  update-kmod-android12-5.10.json  update-kmod-android13-5.10.json  update-kmod-android13-5.15.json  (+5 more)
(+59 files in other folders)
