[package]
name = "vpnhide_checks"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "vpnhide_checks"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }
libc = "0.2"
log = "0.4"
android_logger = { version = "0.15", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
